--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "echarts-for-react": "^3.0.2",
     "formik": "^2.2.9",
     "framer-motion": "^10.9.1",
     "js-cookie": "^3.0.1",
